# REBALANCE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: fairness-primer.md  getting-started.md
notebooks/: 02_bias_detection_demo.ipynb  03_understanding_standard_smote.ipynb  04_smote_fairness_limitation.ipynb  05_test_fairness_aware_smote.ipynb  06_complete_pipeline_demo.ipynb  07_comprehensive_evaluation.ipynb  rebalance_.ipynb
results/comparison/: comprehensive_comparison.json
results/demo_output/: complete_analysis.txt  final_summary.txt  rebalance_report.txt  summary.json
results/recommendations/: recommendation_report.txt
results/reports/: bias_detection_report.txt  comprehensive_evaluation_report.txt  employment_optimization_report.txt  executive_summary.txt
results/validation/: adult_experiment_results.json  validation_summary.txt
scripts/: run_adult_experiment.py  run_comprehensive_comparison.py  test_employment_optimizations.py  test_employment_recommendation.py  test_fair_smote.py  test_recommendation_system.py
src/: __init__.py  cli.py  rebalance.py  simple_rebalance.py
src/bias_detection/: __init__.py  detector.py  simple_detector.py
src/evaluation/: __init__.py  comprehensive_evaluator.py  specialized_tests.py
src/fairness_smote/: __init__.py  employment_fair_smote.py  fair_smote.py  simple_fair_smote.py
src/integration/: __init__.py  external_adapters.py
src/recommendation/: __init__.py  advisor.py
src/utils/: visualization.py
tests/: test_bias_detection.py  test_comprehensive_evaluator.py  test_fair_smote.py  test_integration.py  test_recommendation_system.py
